resolving build errors

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -60,7 +60,6 @@
         android:layout_marginStart="147dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="147dp"
-        android:onClick="saveComic"
         android:text="Add Comic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -79,17 +78,16 @@
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
-        app:layout_constraintEnd_toStartOf="@+id/choose_file"
+        app:layout_constraintEnd_toStartOf="@+id/chooseFile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextYear" />
 
     <Button
-        android:id="@+id/choose_file"
+        android:id="@+id/chooseFile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:layout_marginTop="24dp"
-        android:onClick="chooseFile"
         android:text="Choose File..."
         app:layout_constraintStart_toEndOf="@+id/editTextFilePath"
         app:layout_constraintTop_toBottomOf="@+id/editTextYear" />
