--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.comic_book_reader_yashi.ui.add.AddFragment"
+        android:name="com.example.comicshack.ui.add.AddFragment"
         android:label="@string/title_add"
         tools:layout="@layout/fragment_add" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.comic_book_reader_yashi.ui.dashboard.DashboardFragment"
+        android:name="com.example.comicshack.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.comic_book_reader_yashi.ui.settings.SettingsFragment"
+        android:name="com.example.comicshack.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
