resolve build errors

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,9 +13,10 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="Name"
         android:inputType="textPersonName"
         app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="Name"
+        android:hint="@string/name"
         tools:layout_editor_absoluteX="34dp" />
 
     <EditText
@@ -24,7 +26,8 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="Author"
+        android:autofillHints="Author"
+        android:hint="@string/author"
         android:inputType="textPersonName"
         app:layout_constraintTop_toBottomOf="@+id/editTextName"
         tools:layout_editor_absoluteX="34dp" />
@@ -36,7 +39,8 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="Series"
+        android:autofillHints="Series"
+        android:hint="@string/series"
         android:inputType="textPersonName"
         app:layout_constraintTop_toBottomOf="@+id/editTextAuthor"
         tools:layout_editor_absoluteX="34dp" />
@@ -48,7 +52,8 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="Year"
+        android:autofillHints="Year"
+        android:hint="@string/year"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@+id/editTextSeries"
         tools:layout_editor_absoluteX="34dp" />
@@ -60,7 +65,7 @@
         android:layout_marginStart="147dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="147dp"
-        android:text="Add Comic"
+        android:text="@string/title_add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,13 +79,13 @@
         android:layout_marginTop="27dp"
         android:layout_marginEnd="6dp"
         android:clickable="false"
-        android:editable="false"
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
         app:layout_constraintEnd_toStartOf="@+id/chooseFile"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextYear" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextYear"
+        android:autofillHints="File address" />
 
     <Button
         android:id="@+id/chooseFile"
@@ -88,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
         android:layout_marginTop="24dp"
-        android:text="Choose File..."
+        android:text="@string/choose_file"
         app:layout_constraintStart_toEndOf="@+id/editTextFilePath"
         app:layout_constraintTop_toBottomOf="@+id/editTextYear" />
 
