--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,11 +11,11 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="8dp"
+        android:autofillHints="Name"
         android:ems="10"
+        android:hint="@string/name"
         android:inputType="textPersonName"
         app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="Name"
-        android:hint="@string/name"
         tools:layout_editor_absoluteX="34dp" />
 
     <EditText
@@ -25,8 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
         android:autofillHints="Author"
+        android:ems="10"
         android:hint="@string/author"
         android:inputType="textPersonName"
         app:layout_constraintTop_toBottomOf="@+id/editTextName"
@@ -38,8 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
         android:autofillHints="Series"
+        android:ems="10"
         android:hint="@string/series"
         android:inputType="textPersonName"
         app:layout_constraintTop_toBottomOf="@+id/editTextAuthor"
@@ -51,8 +50,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
         android:autofillHints="Year"
+        android:ems="10"
         android:hint="@string/year"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@+id/editTextSeries"
@@ -78,14 +77,14 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="6dp"
+        android:autofillHints="File address"
         android:clickable="false"
         android:ems="10"
         android:focusable="false"
         android:inputType="none"
         app:layout_constraintEnd_toStartOf="@+id/chooseFile"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextYear"
-        android:autofillHints="File address" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextYear" />
 
     <Button
         android:id="@+id/chooseFile"
