--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.example.comicshack.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
+
+    <fragment
+        android:id="@+id/navigation_edit"
+        android:name="com.example.comicshack.ui.edit.EditFragment"
+        android:label="Edit"
+        tools:layout="@layout/fragment_edit" />
 </navigation>
