--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <EditText
+        android:paddingTop="?attr/actionBarSize"
         android:id="@+id/editTextName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
