--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -9,8 +9,10 @@
         android:id="@+id/viewPagerImageSlider"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingStart="80dp"
-        android:paddingEnd="80dp">
+        android:layout_marginBottom="30dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="40dp">
+
 
     </androidx.viewpager2.widget.ViewPager2>
 
